<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MenuBar2">
    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradientmenu"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grade"
            android:textSize="14sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/ssplight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.280"
            app:layout_constraintVertical_bias="0.130"/>
    <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/profile1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.083"
            app:layout_constraintVertical_bias="0.096"
            tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/productsansbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.321"
            app:layout_constraintVertical_bias="0.091"/>
    <ImageView
            android:layout_width="240dp"
            android:layout_height="43dp"
            android:background="@drawable/state"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.255"
            app:layout_constraintVertical_bias="0.520"
            android:layout_marginRight="300dp"
            tools:ignore="ContentDescription"/>
    <ImageView
            android:layout_width="25dp"
            android:layout_height="27dp"
            android:background="@drawable/homeicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.111"
            app:layout_constraintVertical_bias="0.253"
            tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/sspbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.240"
            app:layout_constraintVertical_bias="0.253"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/sspbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintVertical_bias="0.339"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/profile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintVertical_bias="0.340"
            tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subjects"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/sspbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintVertical_bias="0.430" />

    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/subjects"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintVertical_bias="0.430"
            tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/messages"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/sspbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.260"
            app:layout_constraintVertical_bias="0.515"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/ic_outline_message_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintVertical_bias="0.520"
            tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/sspbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.247"
            app:layout_constraintVertical_bias="0.605" />
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/settingsicon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintVertical_bias="0.604"
            tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="20sp"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/sspbold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.246"
            app:layout_constraintVertical_bias="0.937"/>
    <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/logout"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.112"
            app:layout_constraintVertical_bias="0.940"
            tools:ignore="ContentDescription"/>
    <Button
            android:id="@+id/home_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.253"/>
    <Button
            android:id="@+id/profile_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.339"/>
    <Button
            android:id="@+id/subjects_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.430"/>
    <Button
            android:id="@+id/messages_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.515"/>
    <Button
            android:id="@+id/settings_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.605"/>
    <Button
            android:id="@+id/logout_button"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintVertical_bias="0.935"/>

    //Home side state
    <ImageView
            android:layout_width="304dp"
            android:layout_height="540dp"
            android:background="@drawable/messagesmenu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.495"
            android:layout_marginLeft="250dp"
            android:layout_marginStart="0dp"
            tools:ignore="ContentDescription"/>
    <ImageButton
            android:id="@+id/back_button"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.727"
            app:layout_constraintVertical_bias="0.207"
            tools:ignore="ContentDescription"/>
</androidx.constraintlayout.widget.ConstraintLayout>