<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">
    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradientmenu"/>
    <ImageView
            android:layout_width="237dp"
            android:layout_height="53dp"
            android:background="@drawable/loginreact"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.65"
            tools:ignore="ContentDescription"/>
    <EditText
            android:id="@+id/username_input"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/enterus"
            android:fontFamily="@font/ssplight"
            android:textSize="12sp"
            android:alpha=".50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.642"
            app:layout_constraintHorizontal_bias="0.489"
            android:inputType="none"
            android:importantForAutofill="no"
            tools:ignore="LabelFor,TextFields"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:fontFamily="@font/sspsemibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.581"
            app:layout_constraintHorizontal_bias="0.301"/>
    <ImageView
            android:layout_width="237dp"
            android:layout_height="53dp"
            android:background="@drawable/loginreact"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.764"
            tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:fontFamily="@font/sspsemibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.691"
            app:layout_constraintHorizontal_bias="0.297"/>
    <EditText
            android:id="@+id/password_input"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/enterpa"
            android:fontFamily="@font/ssplight"
            android:textSize="12sp"
            android:alpha=".50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.756"
            app:layout_constraintHorizontal_bias="0.489"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="LabelFor,TextFields"/>
    <ImageView
            android:layout_width="105dp"
            android:layout_height="56dp"
            android:background="@drawable/loginok"
            android:scaleType="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.882" tools:ignore="ContentDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="18sp"
            android:textColor="@color/White"
            android:fontFamily="@font/sspsemibold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.858"/>
    <Button
            android:id="@+id/login_button"
            android:layout_width="105dp"
            android:layout_height="40dp"
            android:alpha="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.861"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="12sp"
            android:textColor="@color/White"
            android:alpha=".70"
            android:fontFamily="@font/ssplight"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.903"
            app:layout_constraintHorizontal_bias="0.498"/>
    <ImageView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:scaleType="center"
            android:background="@drawable/logoedubuddy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.186"
            app:layout_constraintHorizontal_bias="0.495"
            tools:ignore="ContentDescription"/>
</androidx.constraintlayout.widget.ConstraintLayout>