...
    <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/White"
            android:id="@+id/view"/>
    <ImageButton
            android:id="@+id/menu_button"
            android:layout_width="29dp"
            android:layout_height="19dp"
            android:background="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.139"
            app:layout_constraintVertical_bias="0.303"/>
    <ImageButton
            android:id="@+id/search_button"
            android:layout_width="320dp"
            android:layout_height="80dp"
            android:background="@drawable/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
...
