...
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintVertical_bias="0.298"
            tools:ignore="ContentDescription"/>
    <EditText
            android:id="@+id/search_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:textSize="14sp"
            android:textColor="#15096F"
            android:fontFamily="@font/ssplight"
...
